Added views for testing

--- a/MHBuilder.Iceborne/App.xaml
+++ b/MHBuilder.Iceborne/App.xaml
@@ -3,6 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MHBuilder.Iceborne">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Views/RootView.xaml"/>
+                <ResourceDictionary Source="Views/SkillSelectorView.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
