--- a/MHBuilder.Iceborne/MainWindow.xaml
+++ b/MHBuilder.Iceborne/MainWindow.xaml
@@ -6,12 +6,5 @@
         xmlns:local="clr-namespace:MHBuilder.Iceborne"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Button Content="Show" Click="Button_Click"></Button>
-        <Button Content="ShowDialog" Grid.Column="2" Click="Button2_Click"></Button>
-    </Grid>
+    <ContentControl Content="{Binding}" ContentTemplate="{StaticResource RootView}" Focusable="False"/>
 </Window>
