--- a/MHBuilder.Iceborne/Views/SkillSelector/SkillView.xaml
+++ b/MHBuilder.Iceborne/Views/SkillSelector/SkillView.xaml
@@ -1,6 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <DataTemplate x:Key="SkillSelector.SkillView">
-        <ContentControl Content="{Binding Name, Mode=OneTime}" ContentTemplate="{StaticResource LocalizationStringView}"/>
+        <Button Command="{Binding ToggleSkillSelectionCommand, Mode=OneTime}">
+            <Button.Template>
+                <ControlTemplate>
+                    <ContentControl Content="{Binding Name, Mode=OneTime}" ContentTemplate="{StaticResource LocalizationStringView}"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </DataTemplate>
+
 </ResourceDictionary>
