--- a/MHBuilder.Iceborne/Views/SkillSelector/SkillSelectorRootView.xaml
+++ b/MHBuilder.Iceborne/Views/SkillSelector/SkillSelectorRootView.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:bhv="clr-namespace:MHBuilder.WPF.Behaviors;assembly=MHBuilder.WPF"
                     xmlns:vm="clr-namespace:MHBuilder.Iceborne.ViewModels">
 
     <Style x:Key="SkillSelectorListBoxStyle" TargetType="{x:Type ListBox}">
@@ -8,6 +9,7 @@
         <Setter Property="VirtualizingPanel.IsVirtualizing" Value="False"/>
         <Setter Property="VirtualizingPanel.ScrollUnit" Value="Pixel"/>
         <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Margin" Value="2"/>
     </Style>
 
     <Style x:Key="SkillSelectorSkillBorderStyle" TargetType="{x:Type Border}">
@@ -26,7 +28,7 @@
         <DockPanel LastChildFill="True">
             <DockPanel DockPanel.Dock="Top" LastChildFill="True" Margin="2">
                 <TextBlock DockPanel.Dock="Left" VerticalAlignment="Center" Margin="2" FontSize="16" Text="Filter:"/>
-                <TextBox DockPanel.Dock="Top" Text="{Binding SearchText.SearchText, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}" Margin="2" Padding="2" VerticalContentAlignment="Center" FontSize="16" VerticalAlignment="Stretch"/>
+                <TextBox DockPanel.Dock="Top" Text="{Binding SearchText.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="2" Padding="2" VerticalContentAlignment="Center" FontSize="16" VerticalAlignment="Stretch" bhv:FocusOnLoadBehavior.IsAttached="True" bhv:FocusOnLoadBehavior.TextBoxSelectAll="True"/>
             </DockPanel>
 
             <UniformGrid Columns="2">
